test/fixtures/diagnostics/type-checker/negative/yield-mismatch/input.tysh
namespace Samples.Yield.Negative

import { IEnumerable } from "System.Collections.Generic"

fun broken(): IEnumerable<string> {
  yield 42
}
